crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@err_undefined_item.txt.snap
---
source: crates/dbt-jinja/minijinja/tests/test_templates.rs
description: "{{ seq[42][23] }}"
info:
  seq:
    - 1
    - 2
    - 3
input_file: crates/dbt-jinja/minijinja/tests/inputs/err_undefined_item.txt
---
!!!ERROR!!!

Error {
    kind: UndefinedError,
    name: "err_undefined_item.txt",
    line: 1,
}

undefined value
(in err_undefined_item.txt:1)
--------------------------- err_undefined_item.txt ----------------------------
   1 > {{ seq[42][23] }}
     i ^^^^^^^^^^^^^^^^^ undefined value
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Referenced variables: {
    seq: (
        1,
        2,
        3,
    ),
}
-------------------------------------------------------------------------------
