crates/dbt-jinja/minijinja/tests/snapshots/test_templates__vm@include_missing.txt.snap
---
source: crates/dbt-jinja/minijinja/tests/test_templates.rs
description: "Before\n{% include template %}\nAfter"
info:
  template: missing_template.txt
input_file: crates/dbt-jinja/minijinja/tests/inputs/include_missing.txt
---
!!!ERROR!!!

Error {
    kind: TemplateNotFound,
    detail: "tried to include non-existing template 'missing_template.txt'",
    name: "include_missing.txt",
    line: 2,
}

template not found: tried to include non-existing template 'missing_template.txt'
(in include_missing.txt:2)
----------------------------- include_missing.txt -----------------------------
   1 | Before
   2 > {% include template %}
     i ^^^^^^^^^^^^^^^^^^^^^^ template not found
   3 | After
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Referenced variables: {
    template: 'missing_template.txt',
}
-------------------------------------------------------------------------------
